smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/annotation-invalid-object-key2.smithy
// Parse error at line 3, column 6 near `{`
namespace com.foo
@foo({}: true)
string MyString
